# TPMVARQ

./: CMakeLists.txt  README.md  main.c
dissasembler/: dissasembler.c  dissasembler.h
instructions/: instructions.c  instructions.h
loader/: loader.c  loader.h
memory/: memory.c  memory.h
traductor/: ej1.asm  ej1.vmx  otro.asm  otro.vmx  raro.asm  raro.vmx  sample1.asm  sample1.vmx
vmx/: vmx.c  vmx.h
